remove <p> when storename empty, fix test setup error overflow on mobile

--- a/css/admin.css
+++ b/css/admin.css
@@ -75,3 +75,10 @@
         height: auto;
     }
 }
+
+/* responsive notice styling */
+.bnomics-options-margin-top .notice {
+    max-width: 100%;
+    box-sizing: border-box;
+    word-wrap: break-word;
+}
